# Hybrid-RAGOps-aws

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  Vagrantfile  build_and_push.sh  commands.md  docker-compose.yml  export.sh  output.yaml  rayserve_embedder_reranker.py  rayserve_entrypoint.py  requirements-cpu.txt  requirements.dev.txt  test_onnx_int8.py  test_onnx_int8.sh  test_onnx_models.py
.devcontainer/: Dockerfile  devcontainer.json
configs/: dev.sh  indexing_pipelines.sh
data_sample/: IEEE_docx_file.docx
docs/: RAG8s-local.md  SOTA.md  backups.md  indexing_pipelines.md  qdrant.md  weaviate.md
export-configs/: dev.sh  on-prem.sh
indexing_pipeline/: backup_qdrant_data.sh  cpu-requirements-pinned.txt  cpu-requirements.txt  index.py  ray_indexing_pipeline.py  relik.sh  requirements-cpu.txt  requirements.txt  test_weaviate.py
inference_pipeline/: Dockerfile  auth_control.py  llm_retrieval.py  trace_file.py
infra/karpenter-nodepool-cpu/images/onnx-embedder-reranker/: Dockerfile  build_and_push.sh  grpc.proto  pyproject.toml  rayserve_embedder_reranker.py  rayserve_entrypoint.py  requirements-cpu.txt  run_and_test_local.sh  test_and_push.sh
scripts/: dynamic-values.yaml.sh  helm-deploy-dev.sh
utils/: bootstrap-amd.sh  bootstrap-dev.sh  bootstrap-prod-cpu-arm.sh  bootstrap-prod-cpu.sh  bootstrap-prod-gpu.sh  bootstrap-prod.sh  containerd_auth.sh  create_s3.py  dev_export.sh  force_sync_data_with_s3.py  install.sh  k3d-cluster.sh  k3d.sh  launch-spot-gd4n.sh  lc.sh  local-cluster.sh  login.sh  s3_bucket.py  ssh.sh  tesseract.sh  (+1 more)
(+782 files in other folders)
